--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-SPEECH_KEY=
-SPEECH_ENDPOINT=
-FOUNDRY_API_KEY=
-FOUNDRY_ENDPOINT=
-MODEL_DEPLOYMENT_NAME=
+# Copia este archivo a .env y completa los valores reales
+# NUNCA subas .env al repositorio
+
+FOUNDRY_API_KEY=tu_api_key_aqui
+FOUNDRY_ENDPOINT=https://tu-recurso.services.ai.azure.com/api/projects/tu-proyecto
+MODEL_DEPLOYMENT_NAME=nombre-del-deployment
